--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,12 @@
   <link rel="stylesheet" href="app.css">
 </head>
 <body>
-<div id="wrap" ng-app="walletApp" ng-controller="walletCtrl as vm">
+<div id="wrap" ng-app="walletApp">
   <header>
     <nav>
+      <button type="button" id="navbar-toggle">
+        <i class="fa fa-bars fa-lg"></i>
+      </button>
       <ul class="menu">
         <li><a href="#/home">Home</a></li>
         <li><a href="#/reset">Reset</a></li>
@@ -28,8 +31,16 @@
   <script src="app.js"></script>
   <script src="home/view1.js"></script>
   <script src="view2/view2.js"></script>
-  <script src="components/version/version.js"></script>
-  <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
+<script src="bower_components\jquery-2.1.3.min"></script>
+<script>
+  (function(){
+    var btnCoollapse = $("#navbar-toggle"),
+            menu = $(".menu");
+
+    btnCoollapse.on("click", function(){
+      menu.slideToggle("fast");
+    });
+  })();
+</script>
 </body>
 </html>
