--- a/app/home/home.html
+++ b/app/home/home.html
@@ -2,16 +2,16 @@
     <p>Write the ammount that you wish to add or remove from your basket</p>
     <form name="form" novalidate>
         <fieldset class="form-group">
-            <input name="add" type="number" min="0" required  />
-            <input type="button" value="Add" />
-          <span class="error">
+            <input name="add" type="number" min="0" required ng-model="addAmmount" />
+            <input type="button" value="Add" ng-disabled="form.add.$invalid" ng-click="vm.add(addAmmount)" />
+          <span class="error" ng-show="form.add.$error.number || form.add.$error.min">
             Please enter valid number!
           </span>
         </fieldset>
         <fieldset class="form-group">
-            <input name="remove" type="number" min="0" max="" required />
-            <input type="button" value="Remove" />
-          <span class="error">
+            <input name="remove" type="number" min="0" max="{{vm.total}}" required ng-model="removeAmmount" />
+            <input type="button" value="Remove" ng-disabled="form.remove.$invalid || removeAmmount > vm.total" ng-click="vm.remove(removeAmmount)" />
+          <span class="error" ng-show="form.remove.$error.number || form.remove.$error.min || form.remove.$error.max">
             Please enter valid number!
           </span>
         </fieldset>
@@ -20,17 +20,19 @@
     <div class="added">
         <h3>Added</h3>
         <ul>
+            <li ng-repeat="item in vm.added track by $index">{{item.value | currency: "£"}}<span>{{item.date | date:"dd/MM/yyyy 'at' h:mma"}}</span></li>
         </ul>
     </div>
     <div class="removed">
         <h3>Removed</h3>
         <ul>
+            <li ng-repeat="item in vm.removed track by $index">{{item.value | currency: "£"}}<span>{{item.date | date:"dd/MM/yyyy 'at' h:mma"}}</span></li>
         </ul>
     </div>
     <div class="wallet">
         <h3>Wallet</h3>
         <p>
-            <span>Total: </span>
+            <span>Total: {{vm.total}}</span>
             <i class="fa fa-gbp"></i>
         </p>
     </div>
