--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="app.css">
 </head>
 <body>
-<div id="wrap" ng-app="walletApp">
+<div id="wrap" ng-app="walletApp" ng-controller="walletCtrl as vm">
   <header>
     <nav>
       <button type="button" id="navbar-toggle">
@@ -19,7 +19,7 @@
       </button>
       <ul class="menu">
         <li><a href="#/home">Home</a></li>
-        <li><a href="#/reset">Reset</a></li>
+        <li><a href="#/reset" ng-click="vm.reset()">Reset</a></li>
         <li><a href="#/view2">View Source</a></li>
       </ul>
     </nav>
@@ -28,10 +28,8 @@
 </div>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components\jquery-2.1.3.min"></script>
   <script src="app.js"></script>
-  <script src="home/view1.js"></script>
-  <script src="view2/view2.js"></script>
-<script src="bower_components\jquery-2.1.3.min"></script>
 <script>
   (function(){
     var btnCoollapse = $("#navbar-toggle"),
