--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
       <ul class="menu">
         <li><a href="#/home">Home</a></li>
         <li><a href="#/reset" ng-click="vm.reset()">Reset</a></li>
-        <li><a href="#/view2">View Source</a></li>
+        <li><a href="#/source">View Source</a></li>
       </ul>
     </nav>
   </header>
@@ -29,7 +29,9 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components\jquery-2.1.3.min"></script>
+  <script src="helperModule.js"></script>
   <script src="app.js"></script>
+  <script src="source/source.js"></script>
 <script>
   (function(){
     var btnCoollapse = $("#navbar-toggle"),
