--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
 </div>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components\jquery-2.1.3.min"></script>
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="helperModule.js"></script>
   <script src="app.js"></script>
   <script src="source/source.js"></script>
