--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
   <link href="bower_components/font-awsome/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
 <div id="wrap" ng-app="walletApp" ng-controller="walletCtrl as vm">
@@ -29,9 +29,9 @@
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="helperModule.js"></script>
+  <script src="shared/services.js"></script>
   <script src="app.js"></script>
-  <script src="source/source.js"></script>
+  <script src="components/source/js/source.js"></script>
 <script>
   (function(){
     var btnCoollapse = $("#navbar-toggle"),
