--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="shared/services.js"></script>
+  <script src="shared/helperModule.js"></script>
   <script src="app.js"></script>
   <script src="components/source/js/source.js"></script>
 <script>
